# mini_e_commerce_shop

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in
config/: __init__.py  asgi.py  celery.py  env.py  settings.py  urls.py  views.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py  staging.py
deploy/nginx/: nginx.conf
shop/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
shop/management/commands/: ensure_seller_group.py
shop/migrations/: 0001_initial.py  0002_order_is_paid_order_payment_reminder_sent.py  0003_alter_category_options_alter_order_options_and_more.py
shop/tests/: test_healthcheck.py
